Adding test sum to CI workflow

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,4 +13,4 @@ jobs:
           cd ../ontrack
           npm install
       - name: testing
-        run: echo "hello world!"
+        run: npm test
