--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,9 +8,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: |
-          cd backend
+          cd ontrack
           npm install
-          cd ../ontrack
+          cd ../backend
           npm install
       - name: testing
         run: npm test
