--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,4 +13,6 @@ jobs:
           cd ../backend
           npm install
       - name: testing
-        run: npm test
+        run: |
+          pwd
+          npm test
