Created setup_postgres.js to setup database before running unit tests

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,6 +30,10 @@ jobs:
         run: |
           cd backend
           npm install
+      - name: setup database
+        run: |
+          cd backend
+          node setup_postgres.js
       - name: Run tests
         run: |
           cd backend
