--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           cd backend
           npm install
+          npm install jest
       - name: setup database
         run: |
           cd backend
